--- a/client/src/pages/Notes.css
+++ b/client/src/pages/Notes.css
@@ -8,9 +8,7 @@
 /* ===================================================================
    DEPARTMENT POSTER CARDS (BIG MODERN CARDS)
 =================================================================== */
-
-/* ======= DEPARTMENT POSTER CARDS ======= */
-
+/* BIG POSTER DEPARTMENT CARDS */
 .dept-card {
   position: relative;
   height: 240px;
@@ -28,7 +26,7 @@
   box-shadow: 0px 25px 45px rgba(0, 0, 0, 0.75);
 }
 
-/* Background Image Layer */
+/* Image Layer */
 .dept-card-img {
   position: absolute;
   inset: 0;
@@ -42,7 +40,7 @@
   filter: brightness(0.85);
 }
 
-/* Dark Overlay */
+/* Overlay */
 .dept-card-overlay {
   position: absolute;
   inset: 0;
@@ -57,17 +55,16 @@
 /* Title */
 .dept-card-title {
   position: absolute;
-  bottom: 18px;
-  left: 0;
+  bottom: 16px;
   width: 100%;
   text-align: center;
+  color: #fff;
   font-size: 22px;
   font-weight: 700;
-  color: #fff;
+  text-shadow: 0px 4px 12px rgba(0,0,0,0.9);
   z-index: 3;
-  padding: 0 20px;
-  text-shadow: 0px 6px 14px rgba(0,0,0,0.9);
 }
+
 
 /* ===================================================================
    SEMESTER CARDS
